FEAT: CHANGED PLAN NAMES
